--- a/README.rmd
+++ b/README.rmd
@@ -55,18 +55,19 @@ For documentation and tutorials, please check our website at [https://core.dymiu
 
 Please visit [dymium-org/dymiumModules](https://github.com/dymium-org/dymiumModules) to see the available modules.
 
-## An example project
+## Try `dymiumCore` with an example project
 
-We have recently setup an example project so that you can see our package in action! Please visit [dymium-org/dymiumExampleProject](https://github.com/dymium-org/dymiumExampleProject) to learn more about it.
+Please visit [dymium-org/dymiumExampleProject](https://github.com/dymium-org/dymiumExampleProject) to learn more about this.
 
 ## Collaboration
 
 We are open to collaboration on this project. If you are interested, please email us at amarin at dymium.org.
 
-## Development plan (as of 11th Jan 2020)
+## Development plan (as of 14th March 2020)
 
-- [x] __Version 0.1.0__: (21 Jan 2020) Releases all the basic building blocks for microsimulation modelling.
-- [ ] __Version 0.2.0__: Implements model-based calibration.
+- [x] __Version 0.1.0__: (21 Jan 2020) Release all the basic building blocks for microsimulation modelling.
+  - [ ] Support `mlr3` and `mlogit` model objects in the Transition classes.
+- [ ] __Version 0.2.0__: Implement model-based calibration.
 - [ ] __Version 0.3.0__: Visualisation functions for life-courses, spatial data, etc.
 - [ ] __Version 0.4.0__: Integration with dymiumGUI.
 
