docs: add badger's devel version badge to README

--- a/README.rmd
+++ b/README.rmd
@@ -14,9 +14,9 @@ knitr::opts_chunk$set(
 )
 ```
 <!-- badges: start -->
+`r badger::badge_devel("dymium-org/dymiumCore", "blue")`
 [![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 [![License: GPL v3](https://img.shields.io/badge/License-GPL%20v3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0)
-[![CRAN status](https://www.r-pkg.org/badges/version/dymiumCore)](https://CRAN.R-project.org/package=dymiumCore)
 [![Build Status](https://travis-ci.org/dymium-org/dymiumCore.svg?branch=master)](https://travis-ci.org/dymium-org/dymiumCore)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/dymium-org/dymiumCore?branch=master&svg=true)](https://ci.appveyor.com/project/dymium-org/dymiumCore)
 [![Codecov test coverage](https://codecov.io/gh/dymium-org/dymiumCore/branch/master/graph/badge.svg)](https://codecov.io/gh/dymium-org/dymiumCore?branch=master)
@@ -48,12 +48,14 @@ It is true that there is no shortage of open source microsimulation frameworks, 
 
 ## Installation
 
-`dymiumCore` is not available on CRAN. You can install directly from GitHub using `remotes`:
+You can install directly from GitHub using `remotes::install_github` or `devtools::install_github`:
 
 ```{r eval = FALSE}
 # install.packages("remotes")
 remotes::install_github("dymium-org/dymiumCore")
 ```
+
+Note that, `dymiumCore` is not yet on CRAN. 
 
 ## Documentation and Tutorials
 
@@ -79,7 +81,7 @@ We are open to collaboration on this project. If you are interested, please emai
 - [ ] __Version 0.3.0__: Visualisation functions for life-courses, spatial data, etc.
 - [ ] __Version 0.4.0__: Integration with dymiumGUI.
 
-# Related open-source frameworks and models {.related-frameworks}
+## Related open-source frameworks and models {.related-frameworks}
 
 __General-purpose microsimulation frameworks__
 
@@ -89,6 +91,7 @@ __General-purpose microsimulation frameworks__
 - [neworder, Python](https://github.com/virgesmith/neworder)
 - [simarioV2, R](https://github.com/kcha193/simarioV2)
 - [JAMSIM, Java](https://github.com/compassresearchcentre/jamsim)
+
 __Multi-agent programmable modeling environment__
 
 - [NetLogo](https://ccl.northwestern.edu/netlogo/)
@@ -98,3 +101,12 @@ __Urban microsimulation land-use models__
 - [UrbanSim, Python](https://github.com/UDST/urbansim)
 - [ILUTE, C#](https://github.com/TravelModellingGroup/ILUTE)
 - [SILO, Java](https://github.com/msmobility/silo)
+
+## Recommended scholarly articles 
+
+To learn more about dynamic microsimulation modelling and some of its use cases please see these articles.
+
+- O’Donoghue, C. (2001). Dynamic microsimulation: a methodological survey. Brazilian Electronic Journal of Economics, 4(2), 77.
+- Li, J., & O'Donoghue, C. (2013). A survey of dynamic microsimulation models: uses, model structure and methodology. International Journal of microsimulation, 6(2), 3-55.
+- Rutter, C. M., Zaslavsky, A. M., & Feuer, E. J. (2011). Dynamic microsimulation models for health outcomes: a review. Medical Decision Making, 31(1), 10-18.
+- GouuAs, K. G., & Kitamura, R. (1992). Travel demand forecasting with dynamic microsimulation.
