--- a/README.rmd
+++ b/README.rmd
@@ -14,12 +14,13 @@ knitr::opts_chunk$set(
 )
 ```
 <!-- badges: start -->
+![GitHub release (latest by date including pre-releases)](https://img.shields.io/github/v/release/dymium-org/dymiumCore?include_prereleases)
 `r badger::badge_devel("dymium-org/dymiumCore", "blue")`
-[![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 [![License: GPL v3](https://img.shields.io/badge/License-GPL%20v3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0)
 [![Travis build status](https://travis-ci.org/dymium-org/dymiumCore.svg?branch=master)](https://travis-ci.org/dymium-org/dymiumCore)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/qhjt91cg08ob7s16/branch/master?svg=true)](https://ci.appveyor.com/project/asiripanich/dymiumcore/branch/master)
 [![Codecov test coverage](https://codecov.io/gh/dymium-org/dymiumCore/branch/master/graph/badge.svg)](https://codecov.io/gh/dymium-org/dymiumCore?branch=master)
+[![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 <!-- [![CRAN_Download_Badge](http://cranlogs.r-pkg.org/badges/dymiumCore)](https://CRAN.R-project.org/package=dymiumCore) -->
 <!-- badges: end -->
 
@@ -48,10 +49,16 @@ It is true that there is no shortage of open source microsimulation frameworks, 
 
 ## Installation
 
-You can install directly from GitHub using `remotes::install_github` or `devtools::install_github`:
+You can install the released version of dymiumCore from Github with:
 
 ```{r eval = FALSE}
-# install.packages("remotes")
+remotes::install_github("dymium-org/dymiumCore", 
+                         ref = remotes::github_release())
+```
+
+The current development version on Github can be installed with:
+
+```{r eval = FALSE}
 remotes::install_github("dymium-org/dymiumCore")
 ```
 
