docs: minor changes in README

--- a/README.rmd
+++ b/README.rmd
@@ -101,7 +101,7 @@ not_dead_filter <-
   . %>%
   .[age != -1]
 
-# create a pipeline of transitions
+# create a pipeline of transition events
 for (year in 1:10) {
   world %>%
     mutate_entity(entity = "Individual", 
@@ -120,13 +120,13 @@ for (year in 1:10) {
 }
 ```
 
-To get the attribute data of the individual agents use `$get_data()` method
+To get the attribute data of any [Entity] object use `$get_data()` method.
 
 ```{r}
 world$entities$Individual$get_data()
 ```
 
-The `add_log` function allows any object to be stored in our World object for doing post-simulation analyses. In the example, we logged the number of individuals that were alive in each simulation year. We can then extract that log data using `get_log()`. The value column of the data.table returns by `get_log()` is a list column, this is to allow any object to be stored, so we must flatten in to integer for plotting later.
+The `add_log` function allows any object to be stored in our World object for doing post-simulation analysis. In the example, we logged the number of individuals that were alive in each simulation year. We can extract the log data using `get_log()`. The `value` column of the log data by `get_log()` is a list column, this is to allow any object to be stored in `value`, so we must flatten in to integer to make the log data easier to work with.
 
 ```{r}
 # get log data
