--- a/README.rmd
+++ b/README.rmd
@@ -93,11 +93,11 @@ world$add(x = Individual$new(.data = ind_data, id_col = "pid"))
 
 # create filters, this is a method for creating functions using `magrittr` and
 # data.table's syntax
-adult_female_filter <- 
+filter_eligible_females <- 
   . %>%
   .[sex == "female" & age %between% c(18, 50)]
 
-not_dead_filter <- 
+filter_alive <- 
   . %>%
   .[age != -1]
 
@@ -110,12 +110,12 @@ for (year in 1:10) {
     transition(entity = "Individual", 
                model = birth_model, 
                attr = "give_birth", 
-               preprocessing_fn = . %>% adult_female_filter %>% not_dead_filter) %>%
+               preprocessing_fn = . %>% filter_eligible_females %>% filter_alive) %>%
     transition(entity = "Individual", 
                model = death_model, 
                attr = "age", 
                values = c(yes = -1L), 
-               preprocessing_fn = not_dead_filter) %>%
+               preprocessing_fn = filter_alive) %>%
     add_log(., time = year, desc = "count:Individual", value = .$entities$Individual$get_data()[age != -1L, .N])
 }
 ```
