docs: add some clarifications to the use of `%>%` in README

--- a/README.rmd
+++ b/README.rmd
@@ -116,9 +116,13 @@ for (year in 1:10) {
                attr = "age", 
                values = c(yes = -1L), 
                preprocessing_fn = filter_alive) %>%
-    add_log(., time = year, desc = "count:Individual", value = .$entities$Individual$get_data()[age != -1L, .N])
+    add_log(time = year, 
+            desc = "count:Individual", 
+            value = .$entities$Individual$get_data()[age != -1L, .N])
 }
 ```
+
+> Note that, the line `value = .$entities$Individual$get_data()[age != -1L, .N]` is using the world object's placeholder which is called `.` for extracting the attribute data of individual agents. This is a feature of `magrittr`, to learn more about various ways that `%>%` can be used see [its documentation page](https://magrittr.tidyverse.org/).
 
 To get the attribute data of any [Entity] object use `$get_data()` method.
 
