--- a/README.rmd
+++ b/README.rmd
@@ -70,11 +70,11 @@ Note that, `dymiumCore` is not yet on CRAN.
 
 This is a minimal example of how one can create a discrete-time microsimulation model with dymiumCore. 
 
-In this example, we have three events: ageing, giving birth, and dying. The ageing event increases age of all individuals by 1 year in each iteration, as control by the for loop. The giving birth event only changes the 'give_birth' variable of eligible female individuals (age between 18 to 50) to 'yes' if the transition for an individual is successful. Note that this simple example doesn't add newborns from the birth event to the population, however, it can be done easily using `Individual$add()`. The dead event changes the age attribute of dying individuals to '-1', which means once an individual is dead it will not be considered in any transition or mutate_entity statement, as we apply `not_dead_filter` and a subset statement to them.
+In this example, we have three events: ageing, giving birth, and dying. The ageing event increases age of all individuals by 1 year in each iteration, as control by the for loop. The giving birth event only changes the 'give_birth' variable of eligible female individuals (age between 18 to 50) to 'yes' if the transition for an individual is successful. The death event changes the age attribute of dying individuals to '-1', which means once an individual is dead it will not be considered in any transition or mutate_entity statement, as we apply `not_dead_filter` and a subset statement to them.
 
 The first principle of dymiumCore is to keep all `Entity` objects and models (optionally) inside a `World` object. This allows us to construct a microsimulation model as a data analysis pipeline, which you will see below.
 
-```{r}
+```{r results = 'hide'}
 library(dymiumCore)
 library(data.table)
 
@@ -85,7 +85,7 @@ death_model <- list(yes = 0.1, no = 0.9)
 # prepare population data
 ind_data <- 
   data.table::copy(toy_individuals) %>%
-  .[, give_birth := "no"]
+  .[, .give_birth := "no"]
 
 # create a World object, a container for all entities and models for simulation
 world <- World$new()
@@ -104,18 +104,30 @@ filter_alive <-
 # create a pipeline of transition events
 for (year in 1:10) {
   world %>%
+    # ageing
     mutate_entity(entity = "Individual", 
                   age := age + 1L, 
                   subset = age != -1L) %>%
+    # simulate birth decision
     transition(entity = "Individual", 
                model = birth_model, 
-               attr = "give_birth", 
+               attr = ".give_birth", 
                preprocessing_fn = . %>% filter_eligible_females %>% filter_alive) %>%
+    # add newborns
+    add_entity(entity = "Individual", 
+               newdata = toy_individuals[age == 0, ], 
+               target = .$entities$Individual$get_data()[.give_birth == "yes", .N]) %>%
+    # reset the birth decision variable
+    mutate_entity(entity = "Individual", 
+                  .give_birth := "no", 
+                  subset = age != -1L) %>%
+    # simulate deaths
     transition(entity = "Individual", 
                model = death_model, 
                attr = "age", 
                values = c(yes = -1L), 
                preprocessing_fn = filter_alive) %>%
+    # log the total number of alive individuals at the end of the iteration
     add_log(time = year, 
             desc = "count:Individual", 
             value = .$entities$Individual$get_data()[age != -1L, .N])
@@ -147,6 +159,7 @@ Let's visualise how many individual agents are still alive at the end of the sim
 library(ggplot2)
 ggplot(data = log_data) +
   geom_col(aes(x = time, y = value, fill = value)) +
+  geom_label(aes(x = time, y = value, label = value)) +
   labs(x = "Time", y = "Number of Individuals") +
   scale_x_continuous(n.breaks = 10) +
   guides(fill = "none") +
