--- a/README.rmd
+++ b/README.rmd
@@ -102,8 +102,8 @@ filter_alive <-
   .[age != -1]
 
 # create a pipeline of transition events
-for (year in 1:10) {
-  world %>%
+microsimulation_pipeline <-
+  . %>% 
     # ageing
     mutate_entity(entity = "Individual", 
                   age := age + 1L, 
@@ -128,10 +128,11 @@ for (year in 1:10) {
                values = c(yes = -1L), 
                preprocessing_fn = filter_alive) %>%
     # log the total number of alive individuals at the end of the iteration
-    add_log(time = year, 
-            desc = "count:Individual", 
+    add_log(desc = "count:Individual", 
             value = .$entities$Individual$get_data()[age != -1L, .N])
-}
+
+# compile and execute
+sim(world = world, pipeline = microsimulation_pipeline, n_iters = 10)
 ```
 
 > Note that, the line `value = .$entities$Individual$get_data()[age != -1L, .N]` is using the world object's placeholder which is called `.` for extracting the attribute data of individual agents. This is a feature of `magrittr`, to learn more about various ways that `%>%` can be used see [its documentation page](https://magrittr.tidyverse.org/).
